# as2micro

./: .gitignore  CMakeLists.txt  README.md
docs/: CONFIG_REGISTER_MAP.md  TODO.md
src/: config.h  main.c
src/drivers/WS2812/: led.c  led.h
src/drivers/adc/: adc.c  adc.h
src/drivers/bluetooth/: bluetooth.c
src/drivers/config_loader/: config_loader.c  config_loader.h
src/drivers/flash/: flash.c  flash.h
src/drivers/i2c/: i2c.c  i2c.h
src/drivers/io/: io.c  io.h
src/drivers/logging/: logging.c  logging.h
src/sensors/CHT8305C/: temp_and_humidity.c  temp_and_humidity.h
src/sensors/SEN13322/: soil_moisture.c
src/tasks/: tasks.c  tasks.h
